# react-tk

./: .gitignore  README.md  pyproject.toml  tach.toml  umm.py
.github/workflows/: main.yaml
example/: basic.py  big_changes.py  load_classes.py  main.py  more.py  stuff.py
playground/: tk_stuff.py
react_tk/: __init__.py
react_tk/interaction/: scheduler.py
react_tk/renderable/: context.py  trace.py
react_tk/rendering/: render_root.py
react_tk/tk/: mount.py
react_tk/util/: dict.py  stack.py
reactk/: Typing Constructs with Unexpected `get_origin()` Results.docx  __init__.py  special typing constructors with no declared type params.docx
reactk/annotations/: annotation_wrapper.py  defaults.py  get_annotation_name.py  get_metadata.py  get_methods.py  metadata_manager.py
reactk/model/: __init__.py  annotation_reader.py  component.py  context.py  prop_value_accessor.py  resource.py  shadow_node.py  top.py  top_reconciler.py  top_resource.py  trace.py
reactk/model2/: annotations.py  key_accessor.py  s_node.py  util.py  v_mapping.py
reactk/pretty/: format_subscript.py  format_superscript.py
reactk/reflect/: args_accessor.py  base.py  generic_reader.py  generic_readers.py  key_accessor.py  readers.py  reflector.py  type_accessors.py
reactk/renderable/: component.py  context.py  renderable_base.py  trace.py
reactk/rendering/: actions.py  component_renderer.py  (+9 more)
scripts/: test_get_own_type_hints.py
test/: test_key_accessor.py  test_method_reader.py  test_reader_annotation.py  test_reader_annotation_inner_type.py  test_reader_method.py  tests.yaml
(+155 files in other folders)
