[tool.poetry]
name = "reactk"
version = "0.1.0"
description = "Build cross-platform native UIs with a react-like feel."
authors = ["GregRos <gregros@gregros.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typeguard = "^4.4.0"
pywin32 = "^308"
funcy = "^2.0"
funcy-typing = "^2.0.8"
pytest = "^8.4.2"
hypothesis = "^6.138.15"
ward = "^0.68.0b0"
[tool.pytest.ini_options]
testpaths = "test"
python_functions = "it_*"
python_classes = ["*_Test"]
python_files = ["*.py"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
